<resources>
    <string name="app_name">SimpleCalculator</string>
    <string name="CE_text">CE</string>
    <string name="left_parentheses_text">(</string>
    <string name="right_parantheses_text">)</string>
    <string name="division_text">/</string>
    <string name="multiply_symbol">*</string>
    <string name="nine">9</string>
    <string name="eight">8</string>
    <string name="seven">7</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="minus_symbol">-</string>
    <string name="three">3</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="plus_symbol">+</string>
    <string name="decimal_point">.</string>
    <string name="zero">0</string>
    <string name="equal_symbol">=</string>
    <string name="back_text">Back</string>
</resources>
