<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/expression_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.18" />

        <TextView
            android:id="@+id/result_text"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@android:color/black"
            android:gravity="end"
            android:singleLine="true"
            android:textAlignment="gravity"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/screen_guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/expression_guideline"
            tools:text="Result" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/screen_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.3" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/layer1_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.44" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/layer2_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.58" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/layer3_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.72" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/layer4_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.86" />

        <TextView
            android:id="@+id/expression_text"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@android:color/black"
            android:gravity="end"
            android:singleLine="true"
            android:textAlignment="gravity"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/expression_guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Expression" />

        <Button
            android:id="@+id/CE_button"
            style="@style/OperationButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/CE_text"
            android:textColor="@android:color/white"
            android:textSize="32sp"
            app:layout_constraintBottom_toTopOf="@+id/layer1_guideline"
            app:layout_constraintEnd_toStartOf="@+id/left_parentheses_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/screen_guideline"
            app:layout_constraintVertical_bias="0.5"
            app:layout_constraintWidth_percent="0.25" />

        <Button
            android:id="@+id/left_parentheses_button"
            style="@style/OperationButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/left_parentheses_text"
            android:textSize="32sp"
            app:layout_constraintBottom_toTopOf="@+id/layer1_guideline"
            app:layout_constraintEnd_toStartOf="@+id/right_parentheses_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/CE_button"
            app:layout_constraintTop_toTopOf="@+id/screen_guideline"
            app:layout_constraintVertical_bias="1.0"
            app:layout_constraintWidth_percent="0.25" />

        <Button
            android:id="@+id/right_parentheses_button"
            style="@style/OperationButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/right_parantheses_text"
            android:textSize="32sp"
            app:layout_constraintBottom_toTopOf="@+id/layer1_guideline"
            app:layout_constraintEnd_toStartOf="@+id/division_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/left_parentheses_button"
            app:layout_constraintTop_toTopOf="@+id/screen_guideline"
            app:layout_constraintVertical_bias="0.5"
            app:layout_constraintWidth_percent="0.25" />

        <Button
            android:id="@+id/division_button"
            style="@style/OperationButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/division_text"
            android:textSize="32sp"
            app:layout_constraintBottom_toTopOf="@+id/layer1_guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/right_parentheses_button"
            app:layout_constraintTop_toTopOf="@+id/screen_guideline"
            app:layout_constraintVertical_bias="0.5"
            app:layout_constraintWidth_percent="0.25" />

        <Button
            android:id="@+id/button_seven"
            style="@style/NumberButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/seven"
            android:textColor="@android:color/white"
            android:textSize="32sp"
            app:layout_constraintBottom_toTopOf="@+id/layer2_guideline"
            app:layout_constraintEnd_toStartOf="@+id/button_eight"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/layer1_guideline"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintWidth_percent="0.25" />

        <Button
            android:id="@+id/button_eight"
            style="@style/NumberButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/eight"
            android:textColor="@android:color/white"
            android:textSize="32sp"
            app:layout_constraintBottom_toTopOf="@+id/layer2_guideline"
            app:layout_constraintEnd_toStartOf="@+id/button_nine"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_seven"
            app:layout_constraintTop_toTopOf="@+id/layer1_guideline"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintWidth_percent="0.25" />

        <Button
            android:id="@+id/button_nine"
            style="@style/NumberButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/nine"
            android:textColor="@android:color/white"
            android:textSize="32sp"
            app:layout_constraintBottom_toTopOf="@+id/layer2_guideline"
            app:layout_constraintEnd_toStartOf="@+id/multiply_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_eight"
            app:layout_constraintTop_toTopOf="@+id/layer1_guideline"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintWidth_percent="0.25" />

        <Button
            android:id="@+id/multiply_button"
            style="@style/OperationButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/multiply_symbol"
            android:textColor="@android:color/white"
            android:textSize="32sp"
            app:layout_constraintBottom_toTopOf="@+id/layer2_guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_nine"
            app:layout_constraintTop_toTopOf="@+id/layer1_guideline"
            app:layout_constraintWidth_percent="0.25" />

        <Button
            android:id="@+id/button_four"
            style="@style/NumberButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/four"
            android:textColor="@android:color/white"
            android:textSize="32sp"
            app:layout_constraintBottom_toTopOf="@+id/layer3_guideline"
            app:layout_constraintEnd_toStartOf="@+id/button_five"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/layer2_guideline"
            app:layout_constraintWidth_percent="0.25" />

        <Button
            android:id="@+id/button_five"
            style="@style/NumberButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/five"
            android:textColor="@android:color/white"
            android:textSize="32sp"
            app:layout_constraintBottom_toTopOf="@+id/layer3_guideline"
            app:layout_constraintEnd_toStartOf="@+id/button_six"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_four"
            app:layout_constraintTop_toTopOf="@+id/layer2_guideline"
            app:layout_constraintVertical_bias="1.0"
            app:layout_constraintWidth_percent="0.25" />

        <Button
            android:id="@+id/button_six"
            style="@style/NumberButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/six"
            android:textColor="@android:color/white"
            android:textSize="32sp"
            app:layout_constraintBottom_toTopOf="@+id/layer3_guideline"
            app:layout_constraintEnd_toStartOf="@+id/subtract_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_five"
            app:layout_constraintTop_toTopOf="@+id/layer2_guideline"
            app:layout_constraintVertical_bias="1.0"
            app:layout_constraintWidth_percent="0.25" />

        <Button
            android:id="@+id/subtract_button"
            style="@style/OperationButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/minus_symbol"
            android:textColor="@android:color/white"
            android:textSize="32sp"
            app:layout_constraintBottom_toTopOf="@+id/layer3_guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_six"
            app:layout_constraintTop_toTopOf="@+id/layer2_guideline"
            app:layout_constraintWidth_percent="0.25" />

        <Button
            android:id="@+id/button_one"
            style="@style/NumberButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/one"
            android:textColor="@android:color/white"
            android:textSize="32sp"
            app:layout_constraintBottom_toTopOf="@+id/layer4_guideline"
            app:layout_constraintEnd_toStartOf="@+id/button_two"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/layer3_guideline"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintWidth_percent="0.25" />

        <Button
            android:id="@+id/button_two"
            style="@style/NumberButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/two"
            android:textColor="@android:color/white"
            android:textSize="32sp"
            app:layout_constraintBottom_toTopOf="@+id/layer4_guideline"
            app:layout_constraintEnd_toStartOf="@+id/button_three"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_one"
            app:layout_constraintTop_toTopOf="@+id/layer3_guideline"
            app:layout_constraintVertical_bias="1.0"
            app:layout_constraintWidth_percent="0.25" />

        <Button
            android:id="@+id/button_three"
            style="@style/NumberButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/three"
            android:textColor="@android:color/white"
            android:textSize="32sp"
            app:layout_constraintBottom_toTopOf="@+id/layer4_guideline"
            app:layout_constraintEnd_toStartOf="@+id/plus_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_two"
            app:layout_constraintTop_toTopOf="@+id/layer3_guideline"
            app:layout_constraintVertical_bias="1.0"
            app:layout_constraintWidth_percent="0.25" />

        <Button
            android:id="@+id/plus_button"
            style="@style/OperationButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/plus_symbol"
            android:textColor="@android:color/white"
            android:textSize="32sp"
            app:layout_constraintBottom_toTopOf="@+id/layer4_guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_three"
            app:layout_constraintTop_toTopOf="@+id/layer3_guideline"
            app:layout_constraintWidth_percent="0.25" />

        <Button
            android:id="@+id/decimal_button"
            style="@style/NumberButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/decimal_point"
            android:textColor="@android:color/white"
            android:textSize="32sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/zero_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/layer4_guideline"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintWidth_percent="0.25" />

        <Button
            android:id="@+id/zero_button"
            style="@style/NumberButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/zero"
            android:textColor="@android:color/white"
            android:textSize="32sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/back_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/decimal_button"
            app:layout_constraintTop_toTopOf="@+id/layer4_guideline"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintWidth_percent="0.25" />

        <Button
            android:id="@+id/back_button"
            style="@style/NumberButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/back_text"
            android:textColor="@android:color/white"
            android:textSize="32sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/equal_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/zero_button"
            app:layout_constraintTop_toTopOf="@+id/layer4_guideline"
            app:layout_constraintVertical_bias="1.0"
            app:layout_constraintWidth_percent="0.25" />

        <Button
            android:id="@+id/equal_button"
            style="@style/OperationButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/equal_symbol"
            android:textColor="@android:color/white"
            android:textSize="32sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/back_button"
            app:layout_constraintTop_toTopOf="@+id/layer4_guideline"
            app:layout_constraintWidth_percent="0.25" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>